--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/xamarin/" />
 <meta property="og:site_name" content="Scanbot SDK for Xamarin" />
 <script type="application/ld+json">
-{"url":"https://scanbotsdk.github.io/documentation/xamarin/","name":"Scanbot SDK for Xamarin","headline":"Scanbot SDK for Xamarin","@type":"WebSite","@context":"https://schema.org"}</script>
+{"headline":"Scanbot SDK for Xamarin","url":"https://scanbotsdk.github.io/documentation/xamarin/","name":"Scanbot SDK for Xamarin","@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/xamarin/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/xamarin/feed.xml" title="Scanbot SDK for Xamarin" /></head>
 <body><header class="site-header" role="banner">
@@ -135,7 +135,7 @@ Also, by removing the “x86” architectures the size of the app package (APK) 
 <p><strong>ProGuard</strong></p>
 
 <p>If you need to enable <a href="https://docs.microsoft.com/en-us/xamarin/android/deploy-test/release-prep/proguard">ProGuard</a> for your Android release build,
-please check <a href="https://github.com/doo/Scanbot-SDK-Examples/wiki/ProGuard">this full list of the ProGuard rules for the Scanbot SDK</a>.</p>
+please check <a href="https://github.com/doo/scanbot-sdk-example-android/wiki/ProGuard">this full list of the ProGuard rules for the Scanbot SDK</a>.</p>
 
 <h4 id="permissions">Permissions</h4>
 <p><strong>Required permissions for Android</strong></p>
