--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/xamarin/xamarin-forms.html" />
 <meta property="og:site_name" content="Scanbot SDK for Xamarin" />
 <script type="application/ld+json">
-{"url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin-forms.html","headline":"Scanbot SDK for Xamarin","@type":"WebPage","@context":"https://schema.org"}</script>
+{"headline":"Scanbot SDK for Xamarin","url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin-forms.html","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/xamarin/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/xamarin/feed.xml" title="Scanbot SDK for Xamarin" /></head>
 <body><header class="site-header" role="banner">
@@ -224,7 +224,7 @@ to the <code class="highlighter-rouge">Application</code> attribute on the <code
 
 <p>Launches the Document Scanner. The scanned pages will be returned asynchronously.</p>
 
-<p><a href="https://github.com/doo/scanbot-sdk-example-xamarin-forms/blob/sd/default-ui-demo/scanbot-sdk-example-xamarin-forms/MainPageViewModel.cs#L60">Show in example app</a></p>
+<p><a href="https://github.com/doo/scanbot-sdk-example-xamarin-forms/blob/master/Scanbot.SDK.Example.Forms/MainPage.cs#L67">Show in example app</a></p>
 
 <p><img src="./assets/images/document_scanner.jpg" alt="alt" title="Document Scanner Screenshot" /></p>
 
@@ -242,7 +242,7 @@ to the <code class="highlighter-rouge">Application</code> attribute on the <code
 
 <p>Launches the Cropping UI on the given page. A page object can be initially created using the Document Scanner ot <code class="highlighter-rouge">SBSDK.Operations.CreateScannedPageAsync()</code>.</p>
 
-<p><a href="https://github.com/doo/scanbot-sdk-example-xamarin-forms/blob/sd/default-ui-demo/scanbot-sdk-example-xamarin-forms/MainPageViewModel.cs#L73">Show in example app</a></p>
+<p><a href="https://github.com/doo/scanbot-sdk-example-xamarin-forms/blob/master/Scanbot.SDK.Example.Forms/Pages/ImageDetailPage.cs#L43">Show in example app</a></p>
 
 <p><img src="./assets/images/cropping.jpg" alt="alt" title="Cropping Screen Screenshot" /></p>
 
@@ -261,7 +261,7 @@ to the <code class="highlighter-rouge">Application</code> attribute on the <code
 
 <p>Launches the MRZ scanner. The scanned data will be returned asynchronously.</p>
 
-<p><a href="https://github.com/doo/scanbot-sdk-example-xamarin-forms/blob/sd/default-ui-demo/scanbot-sdk-example-xamarin-forms/MainPageViewModel.cs#L115">Show in example app</a></p>
+<p><a href="https://github.com/doo/scanbot-sdk-example-xamarin-forms/blob/master/Scanbot.SDK.Example.Forms/Pages/ImageDetailPage.cs#L43">Show in example app</a></p>
 
 <p><img src="./assets/images/mrz.jpg" alt="alt" title="MRZ Screenshot" /></p>
 
@@ -281,7 +281,7 @@ to the <code class="highlighter-rouge">Application</code> attribute on the <code
 
 <p>Launches the barcode/QR-code scanner. The scanned code will be returned asynchronously.</p>
 
-<p><a href="https://github.com/doo/scanbot-sdk-example-xamarin-forms/blob/sd/default-ui-demo/scanbot-sdk-example-xamarin-forms/MainPageViewModel.cs#L104">Show in example app</a></p>
+<p><a href="https://github.com/doo/scanbot-sdk-example-xamarin-forms/blob/master/Scanbot.SDK.Example.Forms/MainPage.cs#L118">Show in example app</a></p>
 
 <p><img src="./assets/images/barcode.jpg" alt="alt" title="Barcode Scanner Screenshot" /></p>
 
