--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/xamarin/xamarin.html" />
 <meta property="og:site_name" content="Scanbot SDK for Xamarin" />
 <script type="application/ld+json">
-{"headline":"Scanbot SDK for Xamarin","@type":"WebPage","url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin.html","@context":"https://schema.org"}</script>
+{"headline":"Scanbot SDK for Xamarin","url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin.html","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/xamarin/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/xamarin/feed.xml" title="Scanbot SDK for Xamarin" /></head>
 <body><header class="site-header" role="banner">
@@ -55,7 +55,7 @@ It contains the Xamarin Bindings for the <strong>Native Scanbot SDKs</strong> fo
 <p>The idea of the Scanbot SDK Xamarin Wrapper is to provide an unified and convenient API for iOS and Android.
 However, since not all Native SDK functionalities are available in the Wrapper namespace, you can use and call them as needed directly from the native namespaces.</p>
 
-<p>Currently the following <strong><a href="https://scanbot.io/sdk.html#packages">Package II</a></strong> functionalities are available for the Xamarin Wrapper classes:</p>
+<p>Currently the following <strong><a href="https://scanbot.io/en/sdk/scanner-sdk/document-scanner-sdk#packages">Package II</a></strong> functionalities are available for the Xamarin Wrapper classes:</p>
 <ul>
   <li>Document detection on images</li>
   <li>Image processing (cropping and perspective correction, rotating, etc)</li>
@@ -433,7 +433,7 @@ iOS/Resources/ScanbotSDKOCRData.bundle/osd.traineddata  // required special data
 <span class="n">List</span><span class="p">&lt;</span><span class="n">OcrResultBlock</span><span class="p">&gt;</span> <span class="n">lines</span> <span class="p">=</span> <span class="n">result</span><span class="p">.</span><span class="n">Lines</span><span class="p">;</span>
 <span class="n">List</span><span class="p">&lt;</span><span class="n">OcrResultBlock</span><span class="p">&gt;</span> <span class="n">words</span> <span class="p">=</span> <span class="n">result</span><span class="p">.</span><span class="n">Words</span><span class="p">;</span>
 </code></pre></div></div>
-<p>See the API reference of the <a href="https://scanbotsdk.github.io/documentation/android/api/net.doo.snap/net/doo/snap/process/OcrResult.html">OcrResult</a> class for more details.</p>
+<p>See the API reference of the <a href="https://scanbotsdk.github.io/documentation/android/api/io/scanbot/sdk/ocr/process/OcrResult.html">OcrResult</a> class for more details.</p>
 
 <p>Example code for iOS:</p>
 
@@ -1026,10 +1026,12 @@ To further improve the user experience you might want to automatically take a ph
 
 <h4 id="scanbotsdkxamarin---version-202-6-august-2020">ScanbotSDK.Xamarin - Version 2.0.2 (6 August 2020)</h4>
 
-<p>🐞 Bug fixes:</p>
-
 <ul>
-  <li>Droid: Fixed binding issue with <code class="highlighter-rouge">ContourDetectorFrameHandler</code></li>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Fixed binding issue with <code class="highlighter-rouge">ContourDetectorFrameHandler</code></li>
+    </ul>
+  </li>
 </ul>
 
 <h4 id="scanbotsdkxamarin---version-200-19-june-2020">ScanbotSDK.Xamarin - Version 2.0.0 (19 June 2020)</h4>
