fix xamarin.forms v2.0.3 release notes

--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/xamarin/xamarin-forms.html" />
 <meta property="og:site_name" content="Scanbot SDK for Xamarin" />
 <script type="application/ld+json">
-{"headline":"Scanbot SDK for Xamarin","@type":"WebPage","url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin-forms.html","@context":"https://schema.org"}</script>
+{"url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin-forms.html","headline":"Scanbot SDK for Xamarin","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/xamarin/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/xamarin/feed.xml" title="Scanbot SDK for Xamarin" /></head>
 <body><header class="site-header" role="banner">
@@ -422,7 +422,7 @@ present an error message to the user if the validation fails and restart a step.
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
-<h4 id="scanbotsdkxamarinforms---version-202-03-sept-2020">ScanbotSDK.Xamarin.Forms - Version 2.0.2 (03 Sept 2020)</h4>
+<h4 id="scanbotsdkxamarinforms---version-203-09-sept-2020">ScanbotSDK.Xamarin.Forms - Version 2.0.3 (09 Sept 2020)</h4>
 
 <ul>
   <li>🐞 Bug fixes:
@@ -442,7 +442,7 @@ present an error message to the user if the validation fails and restart a step.
   </li>
 </ul>
 
-<h4 id="scanbotsdkxamarinforms---version-202-03-sept-2020-1">ScanbotSDK.Xamarin.Forms - Version 2.0.2 (03 Sept 2020)</h4>
+<h4 id="scanbotsdkxamarinforms---version-202-03-sept-2020">ScanbotSDK.Xamarin.Forms - Version 2.0.2 (03 Sept 2020)</h4>
 
 <ul>
   <li>🐞 Bug fixes:
