Xamarin SDK release v3.0.0

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/xamarin/" />
 <meta property="og:site_name" content="Scanbot SDK for Xamarin" />
 <script type="application/ld+json">
-{"headline":"Scanbot SDK for Xamarin","@type":"WebSite","url":"https://scanbotsdk.github.io/documentation/xamarin/","name":"Scanbot SDK for Xamarin","@context":"https://schema.org"}</script>
+{"headline":"Scanbot SDK for Xamarin","url":"https://scanbotsdk.github.io/documentation/xamarin/","name":"Scanbot SDK for Xamarin","@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/xamarin/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/xamarin/feed.xml" title="Scanbot SDK for Xamarin" /></head>
 <body><header class="site-header" role="banner">
@@ -43,7 +43,7 @@
 <h3 id="introduction">Introduction</h3>
 <p>The Scanbot SDK brings scanning and document creation capabilities to your mobile apps.
 It contains modules which are individually licensable as license packages.
-For more details visit our website <a href="https://scanbot.io/sdk">https://scanbot.io/sdk</a></p>
+For more details visit our website <a href="https://scanbot.io">https://scanbot.io</a></p>
 
 <h3 id="requirements">Requirements</h3>
 
@@ -56,17 +56,17 @@ For more details visit our website <a href="https://scanbot.io/sdk">https://scan
 
 <h4 id="mobile-platforms">Mobile Platforms</h4>
 <ul>
-  <li>Android 4.1 (API Level 16) and higher</li>
-  <li>iOS 9 and higher</li>
+  <li>Android 5.0 (API Level 21) and higher</li>
+  <li>iOS 11 and higher</li>
 </ul>
 
 <h4 id="mobile-devices">Mobile Devices</h4>
 <ul>
   <li>Rear-facing camera with autofocus</li>
-  <li>Supported CPUs and Architectures:
+  <li>Supported CPUs and architectures:
     <ul>
       <li>Android: <code class="highlighter-rouge">armeabi-v7, arm64-v8a, x86, x86_64</code></li>
-      <li>iOS: <code class="highlighter-rouge">arm64, armv7, x86_64, i386</code></li>
+      <li>iOS: <code class="highlighter-rouge">arm64</code> for physical devices and <code class="highlighter-rouge">x86_64</code> for simulators</li>
     </ul>
   </li>
 </ul>
@@ -184,13 +184,14 @@ of the Scanbot SDK will terminate your app.</p>
 
 <h4 id="trial-license">Trial License</h4>
 <p>The Scanbot SDK will run without a license for one minute per session!
-To get an unrestricted “no-strings-attached” 30 day trial license, please submit the <a href="https://scanbot.io/sdk/trial.html">Trial License Form</a> on our website.</p>
+To get an unrestricted “no-strings-attached” 30 day trial license, please submit the 
+<a href="https://scanbot.io/en/sdk/demo/trial">Trial License Form</a> on our website.</p>
 
 <p>Please kindly note that a trial license can only be used in a <strong>development and staging environment</strong>.
 You are <strong>not allowed to publish</strong> your app to the App Store, Play Store or any 3rd party Android App Store with a trial license.</p>
 
 <h4 id="purchase-a-production-license">Purchase a Production License</h4>
-<p>You can check and purchase the Scanbot SDK licenses here: <a href="https://scanbot.io/sdk.html">https://scanbot.io/sdk.html</a>.</p>
+<p>You can check and purchase the Scanbot SDK licenses here: <a href="https://scanbot.io">https://scanbot.io</a>.</p>
 
 <h4 id="app-identifier">App Identifier</h4>
 <p>Every app has a unique identifier (sometimes also known as “bundle identifier” or “application ID”). Your license will be bound to this identifier.
