android barcode sdk v1.1.7

--- a/barcode-scanner-sdk/android/index.html
+++ b/barcode-scanner-sdk/android/index.html
@@ -554,6 +554,36 @@ e.g. JPG files from photo library or other sources.</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h3 id="version-117-29-oct-2020">Version 1.1.7 (29 Oct 2020)</h3>
+<ul>
+  <li>🎉 New:
+    <ul>
+      <li>Added <code class="highlighter-rouge">FinderPictureCallback</code> that automatically crops the visible <code class="highlighter-rouge">FinderOverlayView</code> zone and fix an orientation of the snapped image</li>
+      <li>Optical pinch-to-zoom feature for the <code class="highlighter-rouge">CameraView</code> and the digital zoom feature (see <code class="highlighter-rouge">ZoomFinderOverlayView</code>)</li>
+      <li>Consumer proguard rules are now integrated into the library</li>
+      <li><code class="highlighter-rouge">FormattedBarcodeDataMapper</code>’s <code class="highlighter-rouge">DEFAULT</code> implementation was removed. <code class="highlighter-rouge">null</code> is new default value for <code class="highlighter-rouge">BatchBarcodeScannerActivity.newIntent</code> method instead. See <a href="https://github.com/doo/scanbot-sdk-example-android/blob/master/ready-to-use-ui-demo/rtu_ui_components/src/main/java/io/scanbot/example/MainActivity.kt">example</a></li>
+    </ul>
+  </li>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Changed <code class="highlighter-rouge">PictureCallback</code> implementation - it is an abstract class that implements <code class="highlighter-rouge">BasePictureCallback</code> interface</li>
+      <li>Improved recognition of barcodes when scanning matrix barcodes from a short distance</li>
+      <li>Increased camera preview start speed</li>
+      <li>Improved recognition of damaged DataMatrix barcodes</li>
+    </ul>
+  </li>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Added the “force fetch” mechanism for <code class="highlighter-rouge">ScanbotBarcodeDetector</code> ML blobs.</li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Update compile SDK of the library to 29</li>
+    </ul>
+  </li>
+</ul>
+
 <h3 id="version-116-16-sep-2020">Version 1.1.6 (16 Sep 2020)</h3>
 <ul>
   <li>🚀 Improvements:
