--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/web/" />
 <meta property="og:site_name" content="Scanbot Web Document Scanner SDK" />
 <script type="application/ld+json">
-{"url":"https://scanbotsdk.github.io/documentation/web/","name":"Scanbot Web Document Scanner SDK","headline":"Scanbot Web Document Scanner SDK","@type":"WebSite","@context":"https://schema.org"}</script>
+{"url":"https://scanbotsdk.github.io/documentation/web/","headline":"Scanbot Web Document Scanner SDK","name":"Scanbot Web Document Scanner SDK","@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/web/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/web/feed.xml" title="Scanbot Web Document Scanner SDK" /></head>
 <body><header class="site-header" role="banner">
@@ -57,7 +57,7 @@ WebAssembly as well as Scanbot Web Document Scanner SDK are supported as of the 
 <p>Moreover, Scanbot Web Document Scanner SDK is optimized for mobile browsers.
 The latest versions of the following mobile browsers are supported:</p>
 <ul>
-  <li>On Android: Chrome, Firefox, Samsung Internet, Edge</li>
+  <li>On Android: Chrome, Firefox, Edge</li>
   <li>On iOS 11+: Safari only</li>
 </ul>
 
@@ -291,6 +291,24 @@ simply refer back to your SDK object and create the scanner object as follows:</
 
 <p><a name="releaseHistory"></a></p>
 <h2 id="release-history">Release History</h2>
+
+<h4 id="version-102-03-nov-2020">Version 1.0.2 (03 Nov 2020)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Module loading fix for Webpack 5</li>
+    </ul>
+  </li>
+</ul>
+
+<h4 id="version-101-20-oct-2020">Version 1.0.1 (20 Oct 2020)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Typings entrypoint fix</li>
+    </ul>
+  </li>
+</ul>
 
 <h4 id="version-100-25-september-2020">Version 1.0.0 (25 September 2020)</h4>
 <ul>
