xamarin hotfix release v3.1.1

--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -445,6 +445,12 @@ present an error message to the user if the validation fails and restart a step.
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarinforms---version-311-11-nov-2020">ScanbotSDK.Xamarin.Forms - Version 3.1.1 (11 Nov 2020)</h4>
+
+<ul>
+  <li>See the <a href="/documentation/xamarin/xamarin.html#releaseHistory">Changelog</a> of <code class="highlighter-rouge">ScanbotSDK.Xamarin v3.1.1</code></li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms---version-310-4-nov-2020">ScanbotSDK.Xamarin.Forms - Version 3.1.0 (4 Nov 2020)</h4>
 
 <ul>
