--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -1053,6 +1053,35 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-311-11-nov-2020">ScanbotSDK.Xamarin - Version 3.1.1 (11 Nov 2020)</h4>
+
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>iOS:
+        <ul>
+          <li>Fixed a license problem in <code class="highlighter-rouge">SBSDKUIWorkflowScannerViewController</code></li>
+          <li>Fixed a deadlock in <code class="highlighter-rouge">SBSDKUIBarcodesBatchScannerViewController</code></li>
+          <li>Fixed a potential memory leak with <code class="highlighter-rouge">SBSDKUIBarcodesBatchScannerViewController</code></li>
+          <li>The delegate function of <code class="highlighter-rouge">SBSDKUIBarcodeBatchStorageDelegate</code> 
+<code class="highlighter-rouge">- (void)barcodeBatchStorage:(SBSDKUIBarcodeBatchStorage *)storage didUpdateBarcode:(SBSDKUIBarcodeMappedResult *)barcode atIndex:(NSInteger)index;</code> 
+is now called on the main queue</li>
+        </ul>
+      </li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>iOS: Upgraded the native Scanbot iOS SDK to v1.11.8</li>
+    </ul>
+  </li>
+  <li>👉 Please also see:
+    <ul>
+      <li>The <a href="https://scanbotsdk.github.io/documentation/ios/release-history.html">Changelog</a> of the native Scanbot iOS SDK</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-310-4-nov-2020">ScanbotSDK.Xamarin - Version 3.1.0 (4 Nov 2020)</h4>
 
 <ul>
