--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -1053,6 +1053,16 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-312-12-nov-2020">ScanbotSDK.Xamarin - Version 3.1.2 (12 Nov 2020)</h4>
+
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Camera component optimization fix</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-311-11-nov-2020">ScanbotSDK.Xamarin - Version 3.1.1 (11 Nov 2020)</h4>
 
 <ul>
