--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -1053,6 +1053,26 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-313-13-nov-2020">ScanbotSDK.Xamarin - Version 3.1.3 (13 Nov 2020)</h4>
+
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Fixed rendering of the PDF without OCR for PNG storage format</li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Android: Upgraded the native Scanbot Android SDK to <strong>v1.75.2</strong></li>
+    </ul>
+  </li>
+  <li>👉 Please also see:
+    <ul>
+      <li>The <a href="https://github.com/doo/scanbot-sdk-example-android/wiki/Release-History">Changelog</a> of the native Scanbot Android SDK</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-312-12-nov-2020">ScanbotSDK.Xamarin - Version 3.1.2 (12 Nov 2020)</h4>
 
 <ul>
