android barcode sdk release 1.1.8

--- a/barcode-scanner-sdk/android/index.html
+++ b/barcode-scanner-sdk/android/index.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/" />
 <meta property="og:site_name" content="Scanbot Barcode Scanner SDK for Android" />
 <script type="application/ld+json">
-{"headline":"Scanbot Barcode Scanner SDK for Android","url":"https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/","name":"Scanbot Barcode Scanner SDK for Android","@type":"WebSite","@context":"https://schema.org"}</script>
+{"url":"https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/","headline":"Scanbot Barcode Scanner SDK for Android","name":"Scanbot Barcode Scanner SDK for Android","@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/barcode-scanner-sdk/android/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/feed.xml" title="Scanbot Barcode Scanner SDK for Android" /></head>
 <body><header class="site-header" role="banner">
@@ -554,7 +554,27 @@ e.g. JPG files from photo library or other sources.</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
-<h3 id="version-117-29-oct-2020">Version 1.1.7 (29 Oct 2020)</h3>
+<h3 id="version-118-23-nov-2020">Version 1.1.8 (23 Nov 2020)</h3>
+<ul>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Huge improvements in detection of barcodes of PDF417 type</li>
+    </ul>
+  </li>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Fixed bug when RTU UI screens might lose their configuration or crash after going to a paused state</li>
+      <li>Fixed bug when <code class="highlighter-rouge">BatchBarcodeScannerActivity</code> was picking only the first barcode on each scanned frame</li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Dagger library was updated to 2.25.2</li>
+    </ul>
+  </li>
+</ul>
+
+<h4 id="version-117-29-oct-2020">Version 1.1.7 (29 Oct 2020)</h4>
 <ul>
   <li>🎉 New:
     <ul>
@@ -584,7 +604,7 @@ e.g. JPG files from photo library or other sources.</p>
   </li>
 </ul>
 
-<h3 id="version-116-16-sep-2020">Version 1.1.6 (16 Sep 2020)</h3>
+<h4 id="version-116-16-sep-2020">Version 1.1.6 (16 Sep 2020)</h4>
 <ul>
   <li>🚀 Improvements:
     <ul>
@@ -802,7 +822,7 @@ limitations under the License.
 
 Dagger
 
-Version 2.16
+Version 2.25.2
 (https://github.com/google/dagger)
 
 Copyright 2012 The Dagger Authors
